Core Code update

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "ethereum-waffle": "^2.4.1",
-    "ethereumjs-util": "^6.2.0",
+    "ethereum-waffle": "^3.3.0",
+    "ethereumjs-util": "^7.0.8",
     "mocha": "^6.2.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
@@ -34,9 +34,9 @@
   "scripts": {
     "lint": "yarn prettier ./test/*.ts --check",
     "lint:fix": "yarn prettier ./test/*.ts --write",
-    "clean": "rimraf ./build/",
+    "clean": "rimraf ./build/ ./flatten",
     "precompile": "yarn clean",
-    "compile": "waffle .waffle.json",
+    "compile": "waffle .waffle.json && waffle flatten",
     "pretest": "yarn compile",
     "test": "mocha",
     "prepublishOnly": "yarn test"
